# sandline

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  vercel.json
.gemini/: GEMINI.md  settings.json
backend/: .dockerignore  .env.example  .env.test  Cargo.toml  Dockerfile  fly.toml
backend/.sqlx/: query-05f1509bebdf8b335ca120ba4311ba043c6bea855d201c1ed37e6b6167e3f39c.json  query-08724477e181260e5c54806903e3dee170d3eaf2c2b3f3b5bdd50e8e8fb26d62.json  query-08e626b5faebaebe516132080f6ebcaa638c39cce7ebb739ce564459fd6e9d86.json  query-20a1cccff931ae55270ddfa5ce100197a217bb27b8320d4c6a6753a3f41b6dee.json  query-20e25da9c82b3ee37ca21b674a6c1e9198f6f3f1747ea7e6c36af60b4fafe8ca.json  query-2307227f8f85924ddb92c05f4f29e8b4b78b3c0913c30c712e0faa45b56efcc3.json  query-24a15d1dccd964778f843a6be436b0208a809f0b05fd63327554345bdecf8e33.json  query-37992d5ae1a7bc1e586ea1f703d9df55fc850bf98cf9aba085df4294f05f9dce.json  query-3a42cd533392817dbcc542a3455a2241aa1b0ae5377074419a729ba16504caec.json  query-45e1e5bdc89ee6b01f84be2fb77808066d936b6eb15b7c314528e4312ccb2a1a.json  query-45ffbe422189ed6891e734a0a11aa3af6234c8d167cd83d94f1faf10836a2362.json  query-5aada3987cacee6578483d230c6e9b2dbde70eee0373478eb74ab0b48a26e189.json  query-664ce6f3cbce978c39e9fd2c9e8b3bf792b856913af76f7cf98e635ae6ca3924.json  query-7575e0adcb87e46f9ef97722b98ff5bf5f46d78deb2ddf6f4d70fb03f5ddbdd3.json  query-758dc80fd49e4f8eaa4110c98e9d46ac3f92f74fddd4419d4f20865c1c5c006c.json  query-75a4eea9b63ed8e2b46573b11c3b84ed5d573e5108b3555ca896e73fafedf3de.json  query-819d467d2ab1c2a067c337e5b1122a60a66ffee7d4864fd0e4cedc5c9f3fd0d0.json  query-82c356afa300afd1b9d8bf62c4ece5c07b78e0afdb9bc9ace75e105797957650.json  query-8a9fb9e26892c5383d3949a49cc6e310549d826c41b64e582f609ea41aeb1598.json  query-8c3dea7d414bb93a5e2ed8971c3fee3c2d120dd02abcea4363ecbee3d17c6a9e.json  query-956560b2fa54b5690c6fed7f7aceacf89357ec1dab168b89ff8a1f981e4e8321.json  query-9b80cc4e4b4174676a2979259c8c4661161d19052c0edc0bd67a2b89597c981b.json  query-9e1774b142c4f660434bcbca92b2df2fbb012958067fe335f447e2780262e916.json  query-bbc0ad38190c4a832238d80211ae8acc4d9b39e15d7ed1024d6f820d672139a6.json  query-bc04e1b466c0c4a22bc84af29c2e32b5fb5529903ee67daa489e9d04c54aa63a.json  query-c593d86abe05265dcea5987e508a5b2d43aabb6270242060c7d57bd52d8b199b.json  query-d2eb8448f09e9c9151a4671e7a34161735679c76289850becb5831ebe289a9d6.json  query-dd8c4d1387ba1fffef933c60d06baff7c8c3700d121ab19e471eb7c8ba78db6e.json  query-e084df9f3f659c28ba02b8d44f52a9623c2e82ea6d669141cfe43c5f1aed1141.json  query-e216fd07e561f15c64793ce0781959d40c6a598ceaf57df8cc0800a48f709366.json  query-e6d005f9e6afae9dc9501537d477a4b308241461394943871080f67a5fbaf01f.json  query-e76d9956cc38df05448c8a5e014821512b010bbcf75ea01fc4beba174faffa44.json  query-fff6c48db681b341ccbea7c085b0a466a43057595e71e21fa20816e973d83f2a.json
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  jwks.rs  lib.rs  main.rs
backend/src/db/: mod.rs  pool.rs  rls_transaction.rs
backend/src/geometry/: mod.rs  routing.rs  simplification.rs
backend/src/jobs/: confidence_update.rs  curated_tracks_import.rs  mod.rs  osm_import.rs
backend/src/middleware/: auth.rs
backend/src/models/: editing.rs  mod.rs  proposal.rs  route.rs  track.rs
backend/src/routes/: editing.rs  mod.rs  proposals.rs  route_handlers.rs  routes.rs  tracks.rs
backend/tests/: geometry_test.rs  integration_test.rs  rls_policies_test.rs  routes_test.rs
backend/tests/api/: mod.rs  proposals_test.rs  routes_test.rs  tracks_test.rs
backend/tests/common/: db.rs  fixtures.rs  helpers.rs  mod.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
(+67 files in other folders)
