[package]
name = "dakar-planner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
reqwest = "0.11"
tokio-test = "0.4"
axum-test = "14.0"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
serial_test = "3.0"
testcontainers = "0.23"
testcontainers-modules = { version = "0.10", features = ["postgres"] }
rstest = "0.19"
tempfile = "3.8"
